Fix card text overflow

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -8,3 +8,7 @@ html, body, main, .app-container {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
 }
+
+a {
+  word-wrap: break-word;
+}
